syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.quest_bot.grpc";
option java_outer_classname = "QuestServiceProto";

service QuestService {
  rpc processUpdate(GrpcUpdateData) returns (GrpcResponseData);
}

message GrpcUpdateData {
  string receive_time = 1;
  GrpcUser from = 2;
  GrpcMessage message = 3;
  GrpcCallbackQuery callback_query = 4;
  GrpcPollAnswer poll_answer = 5;
}

message GrpcPollAnswer {
  string poll_id = 1;
  repeated int32 option_ids = 2;
}

message GrpcMessage {
  int32 message_id = 1;
  bool edited_message = 2;
  int64 chat_id = 3;
  int32 date = 4;
  string text = 5;
  GrpcBasicFile file = 6;
  bool has_media_spoiler = 7;
  repeated GrpcPhotoSize photo = 8;
  string media_group_id = 9;
  string caption = 10;
  GrpcLocation location = 11;
  bool successful_payment = 12;
}

message GrpcCallbackQuery {
  int32 message_id = 1;
  string data = 2;
}

message GrpcBasicFile {
  string _file_type = 1;
  string file_id = 2;
  string file_unique_id = 3;
  int32 width = 4;
  int32 height = 5;
  int32 duration = 6;
  int64 file_size = 7;
  string file_name = 8;
  string mime_type = 9;
  string type = 10;
  string emoji = 11;
  string set_name = 12;
  bool is_animated = 13;
  bool is_video = 14;
  GrpcPhotoSize thumbnail = 15;
}

message GrpcLocation {
  double longitude = 1;
  double latitude = 2;
  int32 live_period = 3;
}

message GrpcPhotoSize {
  string file_id = 1;
  string file_unique_id = 2;
  int32 width = 3;
  int32 height = 4;
  int32 file_size = 5;
  string file_path = 6;
}

message GrpcUser {
  int64 user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string user_name = 4;
  string language_code = 5;
}


//------------------------------------------------
//------------------------------------------------
//                   RESPONSE
//------------------------------------------------
//------------------------------------------------
message GrpcResponseData {
  repeated GrpcResponseMessageData messageDataList = 1;
}

message GrpcResponseMessageData {
  string messageType = 1;
  int64 chatId = 2;
  int32 messageId = 3;
  string text = 4;
  repeated GrpcMessageEntityData entity = 5;
  GrpcRespKeyboard replyMarkup = 6;
  bool protectContent = 7;

  // poll
  string pollType = 8;
  string question = 9;
  repeated string options = 10;
  int32 correctOptionId = 11;
  bool allowMultipleAnswers = 12;
  string explanation = 13;
  repeated GrpcMessageEntityData explanationEntities = 14;

  // SendFile
  GrpcSendFile sendFile = 15;

  // Media group
  repeated GrpcSendFile mediaList = 16;

  double latitude = 17;
  double longitude = 18;
}

message GrpcSendFile {
  string sendFileType = 1;
  string fileUrl = 2;
  string caption = 3;
  repeated GrpcMessageEntityData captionEntities = 4;
  bool hasSpoiler = 5;
}

message GrpcMessageEntityData {
  string text = 1;
  string entityType = 2;
  string url = 3;
  int32 offset = 4;
  int32 length = 5;
}

message GrpcRespKeyboard {
  string keyboardType = 1;
  repeated GrpcButtonRow buttonRows = 2;
  bool resizeKeyboard = 3;
  bool removeKeyboard = 4;
}

message GrpcButtonRow {
  repeated GrpcButtonData buttons = 1;
}

message GrpcButtonData {
  string text = 1;
  string url = 2;
  string callbackData = 3;
}